--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Change history for OTRS::Repository
 ===================================
 
+0.07 2017-11-05
+
+  + fix dist (updated dist.ini)
+
 0.06 2017-11-05
 
   + Allow file:// protocol for repositories
