--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Change history for OTRS::Repository
 ===================================
 
+0.09 2017-11-16
+
+  + fix tests
+
 0.08 2017-11-16
 
   [IMPROVEMENTS]
