--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
-Change history for OTRS::Repository
-===================================
+Change history for OPM::Repository
+==================================
 
 0.09 2017-11-16
 
